@@ -2,7 +2,7 @@ query: -- test for loading into tables with the correct file format
 -- test for loading into partitions with the correct file format
 
 DROP TABLE T1
-query: CREATE TABLE T1(name STRING) STORED AS SEQUENCEFILE
-query: LOAD DATA LOCAL INPATH '../data/files/kv1.txt' INTO TABLE T1
+query: CREATE TABLE T1(name STRING) STORED AS TEXTFILE
+query: LOAD DATA LOCAL INPATH '../data/files/kv1.seq' INTO TABLE T1
 Failed with exception Wrong file format. Please check the file's format.
 FAILED: Execution Error, return code 1 from org.apache.hadoop.hive.ql.exec.MoveTask
